--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -4,7 +4,7 @@
         <div class="gradient-bg p-5 text-center">
             <h1 class="text-white">Habit Tracker
                 <br />
-                <img src="/assets/calendar.svg" alt="Making Habits!" width="20%" />
+                <img src="/assets/calendar.svg" alt="Making Habits!" width="20%" class="my-3" />
             </h1>
             <!-- Option to register or log-in -->
             <p class="text-white">Create an account or login</p>
