--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -10,7 +10,8 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script src="https://kit.fontawesome.com/761d42c757.js" crossorigin="anonymous"></script>
     <title>Habit Tracker</title>
-    <link rel="stylesheet" href="/assets/css/styles.css" type="text/css">
+    <link rel="shortcut icon" href="/images/calendar-image.png" type="image/x-icon">
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 
 <body>
