--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,22 +1,18 @@
 <!-- Login View -->
-<div class="row mt-5">
-  <div class="col-md-6 m-auto">
-    <div class="card card-body text-center">
-      <h1>Habit Tracker
-        <br />
-        <img src="/assets/calendar.svg" alt="Making Habits!" width="20%" />
-    </h1>
-      <h3 class="text-center mb-3"><i class="fas fa-sign-in-alt"></i> Login</h3>
-      <%- include ("./partials/messages") %>
+<div class="row welcome">
+  <div class="col-md-5 m-auto">
+    <div class="gradient-bg p-5">
+      <h3 class="text-center mb-3 text-white">Login</h3>
+      <%- include ("./partials/toast") %>
       <form action="/users/login" method="POST">
         <div class="form-group">
-          <label for="email">Email</label>
+          <label for="email" class="text-white text-left">Email</label>
           <input type="email" id="email" name="email" required class="form-control" placeholder="Enter Email" />
         </div>
         <button type="submit" class="btn btn-primary btn-block">Login</button>
       </form>
-      <p class="lead mt-4">
-        New User? <a href="/users/register">Register</a>
+      <p class="lead mt-4 text-center text-white">
+        Create an account? <a href="/users/register">Register</a>
       </p>
     </div>
   </div>
