--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,23 +1,17 @@
 <!-- Register View -->
-<div class="row mt-5">
-  <div class="col-md-6 m-auto">
-    <div class="card card-body text-center">
-      <h1>Habit Tracker
-        <br />
-        <img src="/assets/calendar.svg" alt="Making Habits!" width="20%" />
-      </h1>
-      <h3 class="text-center mb-3">
-        <i class="fas fa-user-plus"></i> Register
-      </h3>
-      <%- include ("./partials/messages") %>
+<div class="row welcome">
+  <div class="col-md-5 m-auto">
+    <div class="gradient-bg p-5">
+      <h3 class="text-center mb-3 text-white"> Register </h3>
+      <%- include ("./partials/toast") %>
       <form action="/users/register" method="POST">
         <div class="form-group">
-          <label for="name">Name</label>
+          <label for="name" class="text-white text-left">Name</label>
           <input type="name" id="name" required name="name" class="form-control" placeholder="Enter Name"
             value="<%= typeof name != 'undefined' ? name : '' %>" />
         </div>
         <div class="form-group">
-          <label for="email">Email</label>
+          <label for="email" class="text-white text-left">Email</label>
           <input type="email" id="email" name="email" required class="form-control" placeholder="Enter Email"
             value="<%= typeof email != 'undefined' ? email : '' %>" />
         </div>
@@ -25,7 +19,7 @@
           Register
         </button>
       </form>
-      <p class="lead mt-4">Returning User? <a href="/users/login">Login</a></p>
+      <p class="lead mt-4 text-center text-white">Already have an account? <a href="/users/login">Login</a></p>
     </div>
   </div>
 </div>
